Fix spacing

--- a/social_media_login/style.css
+++ b/social_media_login/style.css
@@ -74,8 +74,7 @@ main{
     display:inline-block;
     width:45%;
     margin:2%;
-    height:65vh;
-    border:1px dashed white;
+    min-height:65vh;
     vertical-align: top;
 }
 
